# simpleFactory2d

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
src/UI/: mainMenu.cpp  mainMenu.hpp
src/entities/: entity.cpp  entity.hpp  player.hpp
src/entities/handlers/: entitiesHandler.cpp
src/entities/player/: player.cpp  player.hpp
src/entities/primitive/: entity.cpp  entity.hpp  tile.cpp  tile.hpp
src/game/: simpleFactory.cpp  simpleFactory.hpp
src/logic/: event.cpp  event.hpp  sdlInput.cpp  sdlInput.hpp
src/logic/Systems/: health.cpp  movement.cpp  movement.hpp
src/logic/movement/: movement.cpp
src/platform/: sfmlWindow.cpp  sfmlWindow.hpp
src/platform/rendering/: renderManager.hpp  testrender.cpp
